[gd_scene load_steps=8 format=2]

[ext_resource path="res://2DToolbox/2DLineSettings.gd" type="Script" id=1]
[ext_resource path="res://3DToolbox/ColBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://2DToolbox/DensBox2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScreenToolbox/SizeBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui_theme.tres" type="Theme" id=5]
[ext_resource path="res://art/joystix monospace.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 6 )

[node name="2DLineSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -791.0
theme = ExtResource( 5 )
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 233.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Vanishing Point"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 32.0
margin_right = 233.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 42.0
margin_right = 233.0
margin_bottom = 72.0
hint_tooltip = "Set the vanishing lines visibility."

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 143.0
margin_bottom = 25.0
text = "Visible    "

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 147.0
margin_right = 177.0
margin_bottom = 30.0
focus_mode = 0
pressed = true

[node name="SizeBox" parent="." instance=ExtResource( 4 )]
margin_top = 82.0
margin_right = 233.0
margin_bottom = 194.0
hint_tooltip = "Set vanishing point position."
title = "Position"
label_one = "x"
label_two = "y"
max_value = 100000
min_value = -100000
title_size = 16

[node name="ColBox" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 233.0
margin_bottom = 327.0
hint_tooltip = "Set vanishing point colour (red, green, blue)."

[node name="DensBox2D" parent="." instance=ExtResource( 3 )]
margin_top = 337.0
margin_right = 233.0
margin_bottom = 392.0
hint_tooltip = "Set no. of vanishing lines."
min_value = 0.0
max_value = 400
step = 1.0
value = 50.0
[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="SizeBox" to="." method="_on_SizeBox_value_changed"]
[connection signal="colour_changed" from="ColBox" to="." method="_on_ColBox_colour_changed"]
[connection signal="density_changed" from="DensBox2D" to="." method="_on_DensBox2D_density_changed"]
